# Rune-Relic

./: .gitignore  ARENA_DESIGNS.md  ASSET_REQUIREMENTS.md  LICENSE  README.md
rune-relic-bevy/: Cargo.toml
rune-relic-bevy/src/: main.rs
rune-relic-bevy/src/game/: combat.rs  components.rs  enemies.rs  mod.rs  player.rs  progression.rs  trail.rs  visuals.rs
rune-relic-bevy/src/network/: client.rs  messages.rs  mod.rs
rune-relic-bevy/src/ui/: mod.rs
rune-relic-client/: README.md
rune-relic-client/Assets/: UniversalRenderPipelineGlobalSettings.asset
rune-relic-client/Assets/Materials/Environment/: Mat_ArenaFloor.mat
rune-relic-client/Assets/Materials/Players/: Mat_Ancient.mat  Mat_Arcane.mat  Mat_Glyph.mat  Mat_Spark.mat  Mat_Ward.mat
rune-relic-client/Assets/Materials/Runes/: Mat_ArcaneRune.mat  Mat_ChaosRune.mat  Mat_PowerRune.mat  Mat_ShieldRune.mat  Mat_SpeedRune.mat  Mat_WisdomRune.mat
rune-relic-client/Assets/Prefabs/Runes/: Rune_Arcane.prefab  (+5 more)
rune-relic-client/Assets/Resources/: DefaultTheme.asset
rune-relic-client/Assets/Scenes/: Game.unity  MainMenu.unity
rune-relic-client/Assets/Scripts/: RuneRelic.asmdef
rune-relic-client/Assets/Shaders/: ArenaFloor.shader  LowPolyLit.shader  MinimapGlow.shader  PlayerForm.shader  RuneGlow.shader
rune-relic-client/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  InputManager.asset  ProjectSettings.asset  TagManager.asset
rune-relic-server/: Cargo.toml
rune-relic-server/src/: lib.rs  main.rs
rune-relic-server/src/core/: fixed.rs  hash.rs  mod.rs  rng.rs  vec2.rs
rune-relic-server/src/game/: ability.rs  collision.rs  events.rs  input.rs  map.rs  mod.rs  rune.rs  shrine.rs  state.rs  tick.rs
rune-relic-server/src/network/: auth.rs  mod.rs  protocol.rs  server.rs  session.rs
rune-relic-server/src/proof/: commitment.rs  merkle.rs  mod.rs  public_inputs.rs  transcript.rs  verify.rs
telegram-client/: GAME_DESIGN.md  index.html  package-lock.json  package.json
telegram-client/src/: App.css  App.tsx  index.css
telegram-client/src/components/: DailyChallenges.tsx  NavBar.tsx
telegram-client/src/data/: bosses.ts  challenges.ts  moves.ts  runes.ts
telegram-client/src/lib/: telegram.ts
telegram-client/src/pages/: BattlePage.tsx  BossPage.tsx  CollectionPage.tsx  DexPage.tsx  EncounterPage.tsx  HomePage.tsx  LabPage.tsx
telegram-client/src/store/: gameStore.ts
telegram-client/src/types/: index.ts
(+70 files in other folders)
